fix clipped annotation toolbar when creator name too long

--- a/src/renderer/assets/styles/components/annotations.scss
+++ b/src/renderer/assets/styles/components/annotations.scss
@@ -650,7 +650,7 @@
       >div {
         display: inherit;
         align-items: center;
-        gap: 5px;
+        overflow: hidden;
 
         button {
           padding: 5px;
